--- a/index.html
+++ b/index.html
@@ -1,15 +1,11 @@
-# TrialProject
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-<title>
-  TrialProject
-</title>
-
+    <title>TrialProject</title>
+    <link rel="stylesheet" href="css/style.css">
   </head>
 
- <body>
-   <<h1> Microverse Trial Collaborators Project Bornittah/Otieno</h1>
-   </body>
-   </html>
+   <body>
+    <h1> Microverse Trial Collaborators Project Bornittah/Otieno</h1>
+  </body>
+</html>
